2009-04-03  Dominique Dumont  <dominique.dumont@hp.com> unreleased v1.210

	* config-model-edit: new -dot_diagram option to get a dot file to
	reprensent the structure of the configuration model

	* lib/Config/Model/models/Itself/Element.pl: index_type is now
	mandatory for hash types

2009-03-30  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/models/Itself/Element.pl: Added summary model
	parameter (Config::Model 0.635)

2009-03-12  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/models/Itself/CommonElement.pl: 'choice' is
	also available for 'reference' values

2009-03-10  Dominique Dumont  <dominique.dumont@hp.com>  v1.209

	* t/*.t: Backported mkpath calls to File::Path delivered by perl
	5.8.8

2009-02-24  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/models/Itself/WarpableElement.pl: changed
	auto_create in auto_create_keys and auto_create_ids (required by
	Config::Model 0.634)

2009-01-09  Dominique Dumont  <dominique.dumont@hp.com> v1.208

	* lib/Config/Model/models/Itself/Class.pl: Added allow_empty
	parameter. Minor corrections related to Augeas integration.

2008-10-14  Dominique Dumont  <dominique.dumont@hp.com> v1.207

	* lib/Config/Model/models/Itself/CommonElement.pl: Added ordered
	parameter to checklist. Ordered checklist feature is required by
	Ssh model for Ciphers list (see Config::Model::OpenSsh).

	* Build.PL: Extract version from Config/Model/Itself.pm (hence the
	bump to v 1.207) so that the pm file versions matches the .tgz
	distribution version.

2008-09-23  Dominique Dumont  <dominique.dumont@hp.com> v0.206

	* lib/Config/Model/models/Itself/Class.pl: Added seq_with_lens
	parameter for Augeas backend.

2008-08-01  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/models/Itself/Class.pl: Bug fix on Augeas
	parameters

2008-07-25  Dominique Dumont v0.205

	* lib/Config/Model/models/Itself/Class.pl: Fixed specification of
	Augeas parameters
